# PoC_FII_DII_data

./: .dockerignore  .env.example  .env.sample  .gitattributes  .gitignore  Dockerfile  README.md  Requirements  Requirements.txt  db_design.sql  init.sh  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
app/: __init__.py  app_driver.py  db.py  main.py  models.py  test_fetch_json_data.py
app/services/: bot_json_msg.py  br_nse.py  fetch_json_data.py  ins_data.py  table_sync.py  upd_data.py
app/tests/: test_bot.py  test_bot_json_msg.py  test_br_nse.py  test_insert.py  test_run_br_nse.py  test_update.py
cloud-scheduler/: deploy_scheduler.sh  nse_fii_dii_job_schedule.yaml
docs/: index.md
docs/architecture/: ARCHITECTURE_arc42.md  ARCHITECTURE_c4_model.md
tests/: bot_check.py  bot_test.py  db_conn_check.py  tes_table_sync.py  test_db_conn.py
