[tool.poetry]
authors = ["admin <admin@example.com>"]
description = "FastAPI project generated using minimal-fastapi-postgres-template."
name = "app"
version = "0.1.0-alpha"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"

# Database
sqlalchemy = "^2.0.41"
psycopg2-binary = "^2.9.10"

# Web scraping & API
playwright = "^1.55.0"
requests = "^2.32.5"

# Utilities
python-dotenv = "^1.0.0"
pytz = "^2025.2"

[tool.poetry.group.dev.dependencies]
coverage = "^7.9.1"
freezegun = "^1.5.2"
greenlet = "^3.2.3"
httpx = "^0.28.1"
mypy = "^1.16.1"
pre-commit = "^4.2.0"
pytest = "^8.4.1"
pytest-asyncio = "^1.0.0"
pytest-cov = "^6.2.1"
pytest-xdist = "^3.8.0"
ruff = "^0.12.1"
uvicorn = { extras = ["standard"], version = "^0.35.0" }

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.pytest.ini_options]
addopts = "-vv -n auto --cov --cov-report xml --cov-report term-missing --cov-fail-under=100"
asyncio_default_fixture_loop_scope = "session"
asyncio_mode = "auto"
testpaths = ["app/tests"]

[tool.coverage.run]
concurrency = ["greenlet"]
omit = ["app/tests/*"]
source = ["app"]

[tool.mypy]
python_version = "3.13"
strict = true

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
# pycodestyle, pyflakes, isort, pylint, pyupgrade
ignore = ["E501"]
select = ["E", "F", "I", "PL", "UP", "W"]
